core.cfn/security-groups/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security Groups Template
Outputs:
  SecurityGroupAsgId:
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupAsgId
    Value:
      Ref: SecurityGroupAsg
  SecurityGroupBastionId:
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupBastionId
    Value:
      Ref: SecurityGroupBastion
  SecurityGroupEfsId:
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupEfsId
    Value:
      Ref: SecurityGroupEfs
  SecurityGroupElbId:
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupElbId
    Value:
      Ref: SecurityGroupElb
  SecurityGroupPlaygroundId:
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupPlaygroundId
    Value:
      Ref: SecurityGroupPlayground
  SecurityGroupVpnId:
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupVpnId
    Value:
      Ref: SecurityGroupVpn
Parameters:
  VpcId:
    Description: VPC ID to add security groups to.
    Type: String
Resources:
  SecurityGroupAsg:
    Properties:
      GroupDescription: Security group for auto scaling playground instances.
      GroupName: asg
      SecurityGroupEgress: []
      SecurityGroupIngress: []
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::SecurityGroup
  SecurityGroupBastion:
    Properties:
      GroupDescription: Security group for SSH bastion instances.
      GroupName: bastion
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::SecurityGroup
  SecurityGroupEfs:
    Properties:
      GroupDescription: Security group for EFS access.
      GroupName: efs
      SecurityGroupEgress: []
      SecurityGroupIngress: []
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::SecurityGroup
  SecurityGroupEgressAsgEfs:
    Properties:
      DestinationSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupEfs
        - GroupId
      FromPort: 2049
      GroupId:
        Fn::GetAtt:
        - SecurityGroupAsg
        - GroupId
      IpProtocol: tcp
      ToPort: 2049
    Type: AWS::EC2::SecurityGroupEgress
  SecurityGroupEgressAsgElb:
    Properties:
      DestinationSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupAsg
        - GroupId
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupElb
        - GroupId
      IpProtocol: tcp
      ToPort: 22
    Type: AWS::EC2::SecurityGroupEgress
  SecurityGroupEgressBastionElb:
    Properties:
      DestinationSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupBastion
        - GroupId
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupElb
        - GroupId
      IpProtocol: tcp
      ToPort: 22
    Type: AWS::EC2::SecurityGroupEgress
  SecurityGroupEgressPlaygroundBastion:
    Properties:
      DestinationSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupPlayground
        - GroupId
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupBastion
        - GroupId
      IpProtocol: tcp
      ToPort: 22
    Type: AWS::EC2::SecurityGroupEgress
  SecurityGroupEgressPlaygroundVpn:
    Properties:
      DestinationSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupPlayground
        - GroupId
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupVpn
        - GroupId
      IpProtocol: tcp
      ToPort: 22
    Type: AWS::EC2::SecurityGroupEgress
  SecurityGroupEgressVpnElb:
    Properties:
      DestinationSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupVpn
        - GroupId
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupElb
        - GroupId
      IpProtocol: tcp
      ToPort: 22
    Type: AWS::EC2::SecurityGroupEgress
  SecurityGroupElb:
    Properties:
      GroupDescription: Security group for ELB access.
      GroupName: elb
      SecurityGroupEgress: []
      SecurityGroupIngress: []
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::SecurityGroup
  SecurityGroupIngressAsgEfs:
    Properties:
      FromPort: 2049
      GroupId:
        Fn::GetAtt:
        - SecurityGroupEfs
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupAsg
        - GroupId
      ToPort: 2049
    Type: AWS::EC2::SecurityGroupIngress
  SecurityGroupIngressBastionElb:
    Properties:
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupElb
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupBastion
        - GroupId
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  SecurityGroupIngressBastionPlayground:
    Properties:
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupPlayground
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupBastion
        - GroupId
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  SecurityGroupIngressElbAsg:
    Properties:
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupAsg
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupElb
        - GroupId
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  SecurityGroupIngressVpnElb:
    Properties:
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupElb
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupVpn
        - GroupId
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  SecurityGroupIngressVpnPlayground:
    Properties:
      FromPort: 22
      GroupId:
        Fn::GetAtt:
        - SecurityGroupPlayground
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - SecurityGroupVpn
        - GroupId
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  SecurityGroupPlayground:
    Properties:
      GroupDescription: Security group for instances accessed via bastion or vpn.
      GroupName: all
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::SecurityGroup
  SecurityGroupVpn:
    Properties:
      GroupDescription: Security group for VPN instances.
      GroupName: vpn
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      - CidrIp: 0.0.0.0/0
        FromPort: 1194
        IpProtocol: udp
        ToPort: 1194
      - CidrIp: 0.0.0.0/0
        FromPort: 943
        IpProtocol: tcp
        ToPort: 943
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::SecurityGroup
